# scopus-recsys-app

./: .gitignore  README.md  pyproject.toml  requirements.txt  scopus-recsys.py  streamlit_app.py
data/predictions/: predictions_00190972-ebea-4a27-80fb-c3723ed7aedc.csv  predictions_018cd2e4-6d20-40ad-9cb5-1cf6e7686a57.csv  predictions_019112cd-c0db-4e38-94f9-e48d0f5da571.csv  predictions_01aa683f-7ecd-4461-adce-d8576c7ac7b2.csv  predictions_02117c64-b881-4552-897f-c2d735406c75.csv  predictions_02aeab99-aa6c-412a-a70a-bcc151fee94f.csv  predictions_03d0e5f3-4082-46fa-9fbd-e0d5ac4cc9fe.csv  predictions_03ee4159-d78b-4f24-96e3-40ad383011d0.csv  predictions_04860f11-46c4-4373-813e-fb801933665e.csv  predictions_04fcb81b-8a80-4abf-b016-b70364f36642.csv  predictions_05e0e125-7de6-4309-a3ec-7addd54975d4.csv  predictions_07542093-2a36-4122-999e-efd73c4995fd.csv  predictions_07bcc009-abbd-4056-adcb-8db352d6fde7.csv  predictions_07e825e5-37b9-497a-a880-ad8274cfa1d3.csv  predictions_098b3508-feda-4002-9b9f-52342c841220.csv  predictions_0a86b65b-eb92-497c-85bb-a4d5989fbb93.csv  predictions_0c434c82-bade-4ca0-994e-07d27ad15bcd.csv  predictions_0c48dccf-4424-4adb-b50f-b06f148aab7b.csv  predictions_0c49f3cc-7bae-48df-8b1f-d22b243f2b5e.csv  (+372 more)
helpers/: password.py
scripts/: main.py
sql/: algorithm-application-links-filtered-by-algorithm.sql  algorithm-application-links-filtered-by-application.sql  algorithm-application-links-filtered-by-score.sql  algorithm-names.sql  application-names.sql  nb-algorithms.sql  nb-applications.sql  nb-occurrences.sql
