[project]
name = "scopus-recsys-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "streamlit>=1.42.2",
    "watchdog>=6.0.0",
    "wordcloud>=1.9.4",
]

[dependency-groups]
ci = [
    "mypy>=1.15.0",
    "mypy-extensions>=1.0.0",
    "ruff>=0.9.9",
]

[tool.mypy]
ignore_missing_imports = true
